fixed flex gap issue

--- a/src/Styles/Canvas.scss
+++ b/src/Styles/Canvas.scss
@@ -22,6 +22,7 @@
             .stripe {
                 box-sizing: border-box;
                 background-repeat: no-repeat; 
+                margin: -1px;
             }
         }
     }
